# hill-renderer

./: .gitignore  .gitmodules  CMakeLists.txt
assets/heart/: heart.mtl
hill/: CMakeLists.txt
hill/cmake/: assimp.cmake  glad.cmake
hill/include/hill/: buffer.hpp  camera.hpp  configuration.hpp  debug.hpp  editor.hpp  error.hpp  graphics_api.hpp  hill.hpp  image.hpp  imgui.hpp  light.hpp  material.hpp  mesh.hpp  model.hpp  primitives_registry.hpp  renderer.hpp  renderer_command.hpp  renderer_common.hpp  scene.hpp  utility.hpp
hill/include/hill/primitives/: buffer.hpp  common.hpp  element_buffer.hpp  shader.hpp  texture2d.hpp  vertex_array.hpp  vertex_buffer.hpp
hill/src/: buffer.cpp  debug.cpp  editor.cpp  graphics_api.cpp  hill.cpp  image.cpp  model.cpp  primitives_registry.cpp  renderer.cpp  renderer_command.cpp  scene.cpp  utility.cpp
hill/src/primitives/: buffer.cpp  common.cpp  element_buffer.cpp  shader.cpp  texture2d.cpp  vertex_array.cpp  vertex_buffer.cpp
shaders/: basic.frag  basic.vert
tests/sdl/cmake/: imgui.cmake
tests/sdl/src/: main.cpp  sdl_example.cpp  sdl_example.hpp
